# tcpudptool

./: README.md  compile.sh  tcpudptool
ncurses-arm/include/: curses.h
project/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  client.sh  config.status  configure  configure.in  server.sh  tcpudp_compile.sh
project/.deps/: rxtx.Po  tcpudptool-TCPClt.Po  tcpudptool-TCPSvr.Po  tcpudptool-main.Po  tthread.Po
project/autom4te.cache/: output.0  requests  traces.0  traces.1
src/: TCPClt.c  TCPSvr.c  dbgmain.c  main.c
src/include/: common.h  types.h
src/rxtx/: rxtx.c  rxtx.h
src/tthread/: tthread.c  tthread.h
