###########################################
#				configure.in        	  #
#										  #
#			  writed by august		      #	
###########################################


AC_INIT()
AM_INIT_AUTOMAKE(tcpudptool, 1.0)
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_RANLIB
AC_ARG_ENABLE(debug,
		[  --enable-debug       Turn on debuggin],
		[case "${enableval}" in
		yes) debug=true ;;
		no)  debug=false ;;
		*) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
		esac],[debug=false])
AM_CONDITIONAL(DEBUG, test x$debug = xtrue)
AC_SUBST(BUILDARCH)
		case "$host" in
			  arm*-*)     BUILDARCH=ARCH_IS_ARM    ;;
			  *)          BUILDARCH=ARCH_IS_GENERIC ;;
		esac
AM_CONDITIONAL(ARMLINUX, test $BUILDARCH = ARCH_IS_ARM)
AM_CONDITIONAL(GENLINUX, test $BUILDARCH = ARCH_IS_GENERIC)
AC_OUTPUT(Makefile)
